# maru.rs

./: Cargo.toml  README.md  todo
content/shaders/: default.frag  default.vert  lib.incl.glsl  spritebatch.incl.frag  spritebatch.incl.vert
src/: content.rs  coordinates.rs  gfx.rs  glfw.rs  lib.rs  main.rs  math.rs  particles.rs  sdl.rs  state_machine.rs  timer.rs
src/defaults/: mod.rs  two_d.rs
src/defaults/two_dimensional/: bitmap_font.rs  drawer2d.rs  locations.rs  mod.rs  program2d.rs  shape_drawer.rs  spritebatch.rs  two_d.rs  vertex2d.rs
src/gfx/: buffer.rs  canvas.rs  instancer.rs  location.rs  mesh.rs  mod.rs  program.rs  shader.rs  texture.rs  uniform.rs  vertex_array.rs
src/math/: aabb.rs  color.rs  mod.rs  transform2d.rs
