[package]
name = "maru"
version = "0.1.0"
authors = ["extrasharp <genericpb@gmail.com>"]
edition = "2018"

[dependencies]
gl = "0.14"
sdl2 = "0.34"
nalgebra = "0.21"
nalgebra-glm = "0.7"
num-traits = "0.2"
memoffset = "0.5"

[dependencies.image]
version = "0.23"
default-features = false
features = ["png", "jpeg"]
